--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
       "backbone"        : "1.1.0",
       "backbone-relational": "git://github.com/inaes-tic/Backbone-relational.git#pageable-compat",
       "backbone.io"     : "git://github.com/inaes-tic/backbone.io",
-      "backbone-pageable" : "1.3.2",
+      "backbone-pageable" : "git://github.com/joseirrazabal/backbone-pageable.git",
       "socket.io"       : "0.9.x",
       "moment"          : "1.7.x"
   },
